--- a/client/scss/pages/login.scss
+++ b/client/scss/pages/login.scss
@@ -1,5 +1,5 @@
 html,body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  //font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   height: 100%;
   padding: 0;
   margin: 0;
@@ -36,7 +36,7 @@ html,body {
 }
 
 .hero-body .container {
-  margin-top: -100px;
+  margin-top: -200px;
 }
 
 .hero.is-dark .section {
