Add main layout

--- a/client/scss/partial/logo.scss
+++ b/client/scss/partial/logo.scss
@@ -1,4 +1,10 @@
 .logo {
   font-family: 'forqueregular', sans-serif;
+  font-size: 72px;
+  line-height: 72px;
+}
+
+.logo--large {
   font-size: 92px;
+  line-height: 92px;
 }
