--- a/client/scss/pages/login.scss
+++ b/client/scss/pages/login.scss
@@ -1,14 +1,3 @@
-html,body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-#react-app {
-  height: inherit;
-  width: inherit;
-}
-
 .email-input,
 .password-input {
   font-size: 18px;
@@ -18,6 +7,13 @@ html,body {
   + .icon {
     margin: 5px 10px 0 0;
   }
+}
+
+.login-button {
+  @extend .button;
+  @extend .is-primary;
+  @extend .is-large;
+  @extend .is-fullwidth;
 }
 
 .forgot-password a {
@@ -34,8 +30,8 @@ html,body {
   font-weight: bold;
 }
 
-.hero-body .container {
-  margin-top: -100px;
+.hero-foot .has-text-right {
+  margin-bottom: 90px;
 }
 
 .hero.is-dark .section {
