Add backend service tests

--- a/client/scss/pages/login.scss
+++ b/client/scss/pages/login.scss
@@ -44,7 +44,7 @@
 }
 
 .hero-banner .hero {
-  background: url('https://unsplash.it/2000/1000') center;
+  background: url('https://unsplash.it/1500/2000?image=522') center;
   background-size: cover;
   background-blend-mode: screen;
 }
